--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -47,7 +47,21 @@
       "errorOccurred": "An error occurred while loading data. Please try again.",
       "failedToLoad": "Failed to load data",
       "failedToSave": "Failed to save",
-      "failedToDelete": "Failed to delete"
+      "failedToDelete": "Failed to delete",
+      "periods": {
+        "today": "Today",
+        "week": "Last 7 days",
+        "month": "Last 30 days",
+        "year": "Last 12 months"
+      },
+      "filterBar": {
+        "timePeriod": "Time Period",
+        "category": "Category",
+        "allCategories": "All Categories",
+        "eventType": "Event Type",
+        "allEventTypes": "All Event Types",
+        "refresh": "Refresh"
+      }
     },
     "sidebar": {
       "overview": "Overview",
@@ -110,7 +124,7 @@
       "funnelSubtitle": "Conversion rate by step",
       "topInsights": "Top Insights",
       "viewAllInsights": "View All Insights",
-      "quickLinks": "Quick Links",
+      "quickLinksTitle": "Quick Links",
       "subtitles": {
         "totalRevenue": "Revenue for selected period",
         "totalOrders": "Orders processed",
@@ -222,39 +236,344 @@
       },
       "ltv": {
         "title": "Customer Lifetime Value",
-        "subtitle": "Analyze customer lifetime value and recurring customers"
+        "subtitle": "Analyze customer lifetime value and recurring customers",
+        "loading": "Loading LTV analytics...",
+        "failedToLoad": "Failed to load LTV analytics",
+        "averageLTV": "Average LTV",
+        "customerLifetimeValue": "Customer lifetime value",
+        "totalCustomers": "Total Customers",
+        "uniqueCustomersAnalyzed": "Unique customers analyzed",
+        "avgOrdersCustomer": "Avg Orders/Customer",
+        "averagePurchaseFrequency": "Average purchase frequency",
+        "recurringRate": "Recurring Rate",
+        "repeatCustomers": "{count} repeat customers",
+        "ltvDistributionTitle": "LTV Distribution",
+        "ltvDistributionSubtitle": "Customer segments by lifetime value",
+        "ltvBySegmentTitle": "LTV by Customer Segment",
+        "ltvBySegmentSubtitle": "Average LTV by customer type",
+        "avgLTV": "Avg LTV",
+        "customers": "Customers",
+        "revenue": "Revenue",
+        "topCustomersTitle": "Top Customers by LTV",
+        "topCustomersSubtitle": "Highest lifetime value customers",
+        "customer": "CUSTOMER",
+        "orders": "ORDERS",
+        "ltv": "LTV",
+        "avgOrderValue": "AVG ORDER VALUE",
+        "frequency": "FREQUENCY",
+        "status": "STATUS",
+        "recurring": "Recurring",
+        "new": "New",
+        "ordersPerMonth": "orders/mo",
+        "anonymous": "Anonymous",
+        "noCustomerDataTitle": "No Customer Data",
+        "noCustomerDataSubtitle": "No customer data available in the selected period",
+        "noCustomersFound": "No customers found",
+        "tryDifferentPeriod": "Try selecting a different time period.",
+        "highLTV": "High LTV",
+        "mediumLTV": "Medium LTV",
+        "lowLTV": "Low LTV"
       },
       "cac": {
         "title": "Customer Acquisition Cost",
-        "subtitle": "Track CAC and LTV:CAC ratio by acquisition channel"
+        "subtitle": "Track CAC and LTV:CAC ratio by acquisition channel",
+        "loading": "Loading CAC analytics...",
+        "failedToLoad": "Failed to load CAC analytics",
+        "averageCAC": "Average CAC",
+        "customerAcquisitionCost": "Customer acquisition cost",
+        "ltvCacRatio": "LTV:CAC Ratio",
+        "excellent": "Excellent",
+        "good": "Good",
+        "needsImprovement": "Needs Improvement",
+        "newCustomers": "New Customers",
+        "acquiredInPeriod": "Acquired in period",
+        "totalMarketingSpend": "Total Marketing Spend",
+        "estimatedSpend": "Estimated spend",
+        "acquisitionEfficiencyTitle": "Acquisition Efficiency",
+        "acquisitionEfficiencySubtitle": "LTV:CAC Ratio: {ratio}:1",
+        "target": "Target: 3:1 or higher",
+        "ratio": "{ratio}:1 Ratio",
+        "goodRatio": "2:1 (Good)",
+        "excellentRatio": "3:1 (Excellent)",
+        "ratio5Plus": "5:1+",
+        "cacByChannelTitle": "CAC by Acquisition Channel",
+        "cacByChannelSubtitle": "Customer acquisition cost by channel",
+        "cac": "CAC",
+        "ltvCac": "LTV:CAC",
+        "conversions": "Conversions",
+        "channelPerformanceTitle": "Channel Performance",
+        "channelPerformanceSubtitle": "Detailed metrics by channel",
+        "channel": "CHANNEL",
+        "sessions": "SESSIONS",
+        "conversionsCol": "CONVERSIONS",
+        "conversionRate": "CONVERSION RATE",
+        "estimatedCAC": "ESTIMATED CAC",
+        "ltvCacRatioCol": "LTV:CAC RATIO",
+        "status": "STATUS",
+        "needsWork": "Needs Work",
+        "noChannelDataTitle": "No Channel Data",
+        "noChannelDataSubtitle": "No acquisition channel data available in the selected period",
+        "noChannelDataFound": "No channel data found",
+        "tryDifferentPeriod": "Try selecting a different time period."
       },
       "retention": {
         "title": "Retention & Churn",
-        "subtitle": "Customer retention rates and cohort analysis"
+        "subtitle": "Customer retention rates and cohort analysis",
+        "loading": "Loading retention analytics...",
+        "failedToLoad": "Failed to load retention analytics",
+        "retentionRate": "Retention Rate",
+        "returningCustomers": "{count} returning customers",
+        "churnRate": "Churn Rate",
+        "churnedCustomers": "{count} churned customers",
+        "avgPurchaseFrequency": "Avg Purchase Frequency",
+        "ordersPerCustomer": "Orders per customer",
+        "avgDaysBetweenOrders": "Avg Days Between Orders",
+        "forReturningCustomers": "For returning customers",
+        "newCustomers": "New Customers",
+        "firstTimeBuyers": "First-time buyers",
+        "returningCustomersLabel": "Returning Customers",
+        "repeatBuyers": "Repeat buyers",
+        "totalCustomers": "Total Customers",
+        "allCustomers": "All customers",
+        "retentionRatesByPeriodTitle": "Retention Rates by Period",
+        "retentionRatesByPeriodSubtitle": "Customer retention after first purchase",
+        "retentionRateLabel": "Retention Rate",
+        "cohortRetentionAnalysisTitle": "Cohort Retention Analysis",
+        "cohortRetentionAnalysisSubtitle": "Retention rates by customer cohort (month of first purchase)",
+        "retention": "Retention",
+        "cohortDetailsTitle": "Cohort Details",
+        "cohortDetailsSubtitle": "Detailed retention metrics by cohort",
+        "cohort": "COHORT",
+        "customers": "CUSTOMERS",
+        "d30Retention": "D30 RETENTION",
+        "d60Retention": "D60 RETENTION",
+        "d90Retention": "D90 RETENTION",
+        "noCohortDataTitle": "No Cohort Data",
+        "noCohortDataSubtitle": "No cohort data available in the selected period",
+        "noCohortsFound": "No cohorts found",
+        "tryDifferentPeriod": "Try selecting a different time period."
       },
       "abandonmentPrediction": {
         "title": "Abandonment Prediction",
-        "subtitle": "Real-time risk scores for checkout abandonment"
+        "subtitle": "Real-time risk scores for checkout abandonment",
+        "loading": "Loading abandonment predictions...",
+        "failedToLoad": "Failed to load abandonment predictions",
+        "highRiskSessionsDetected": "high-risk session{plural} detected",
+        "implementInterventions": "Consider implementing intervention strategies for these sessions.",
+        "averageRiskScore": "Average Risk Score",
+        "sessionsAnalyzed": "sessions analyzed",
+        "highRiskSessions": "High Risk Sessions",
+        "ofTotal": "of total",
+        "typicalCheckoutTime": "Typical Checkout Time",
+        "basedOnHistorical": "Based on historical data",
+        "avgCheckoutTime": "Avg Checkout Time",
+        "actualAverageTime": "Actual average time",
+        "riskDistributionTitle": "Risk Distribution",
+        "riskDistributionSubtitle": "Sessions by risk level",
+        "abandonmentByRiskTitle": "Abandonment Rate by Risk Level",
+        "abandonmentByRiskSubtitle": "Actual abandonment rates by predicted risk",
+        "abandonmentRate": "Abandonment Rate",
+        "total": "Total",
+        "abandoned": "Abandoned",
+        "highRiskSessionsTitle": "High Risk Sessions",
+        "highRiskSessionsSubtitle": "Sessions with high or critical abandonment risk",
+        "session": "SESSION",
+        "riskScore": "RISK SCORE",
+        "riskLevel": "RISK LEVEL",
+        "currentStep": "CURRENT STEP",
+        "duration": "DURATION",
+        "errors": "ERRORS",
+        "status": "STATUS",
+        "recommendations": "RECOMMENDATIONS",
+        "completed": "Completed",
+        "abandoned": "Abandoned",
+        "active": "Active",
+        "noHighRiskTitle": "No High Risk Sessions",
+        "noHighRiskSubtitle": "No high-risk sessions detected in the selected period",
+        "allSessionsGood": "All sessions look good!",
+        "noHighRiskPatterns": "No high-risk abandonment patterns detected.",
+        "low": "Low",
+        "medium": "Medium",
+        "high": "High",
+        "critical": "Critical"
       },
       "cohorts": {
         "title": "Cohort Analysis",
-        "subtitle": "Detailed cohort retention and LTV analysis"
+        "subtitle": "Detailed cohort retention and LTV analysis",
+        "loading": "Loading cohorts analysis...",
+        "failedToLoad": "Failed to load cohorts analysis",
+        "totalCohorts": "Total Cohorts",
+        "cohortsAnalyzed": "Cohorts analyzed",
+        "avgPerCohort": "Avg {count} per cohort",
+        "averageLTV": "Average LTV",
+        "perCohort": "Per cohort",
+        "m1Retention": "M1 Retention",
+        "firstMonthRetention": "First month retention",
+        "avgRetentionTrendTitle": "Average Retention Trend",
+        "avgRetentionTrendSubtitle": "Retention rate by period (months since first purchase)",
+        "retentionRate": "Retention Rate",
+        "cohortRetentionMatrixTitle": "Cohort Retention Matrix",
+        "cohortRetentionMatrixSubtitle": "Retention rates by cohort and period",
+        "cohort": "COHORT",
+        "size": "SIZE",
+        "avgLTV": "AVG LTV",
+        "cohortLTVComparisonTitle": "Cohort LTV Comparison",
+        "cohortLTVComparisonSubtitle": "Average LTV by cohort",
+        "cohortSize": "Cohort Size",
+        "noCohortDataTitle": "No Cohort Data",
+        "noCohortDataSubtitle": "No cohort data available in the selected period",
+        "noCohortsFound": "No cohorts found",
+        "tryLongerPeriod": "Try selecting a longer time period (month or year)."
       },
       "segments": {
         "title": "Behavioral Segments",
-        "subtitle": "Customer segmentation by behavior and value"
+        "subtitle": "Customer segmentation by behavior and value",
+        "loading": "Loading segments analysis...",
+        "failedToLoad": "Failed to load segments analysis",
+        "totalCustomers": "Total Customers",
+        "acrossAllSegments": "Across all segments",
+        "overallAvgLTV": "Overall Avg LTV",
+        "averageLifetimeValue": "Average lifetime value",
+        "averageAOV": "Average AOV",
+        "averageOrderValue": "Average order value",
+        "avgOrders": "Avg Orders",
+        "ordersPerCustomer": "Orders per customer",
+        "distributionTitle": "Customer Segments Distribution",
+        "distributionSubtitle": "Percentage of customers in each segment",
+        "ltvBySegmentTitle": "LTV by Segment",
+        "ltvBySegmentSubtitle": "Average lifetime value and AOV by customer segment",
+        "avgLTV": "Avg LTV",
+        "avgAOV": "Avg AOV",
+        "customers": "Customers",
+        "segmentShare": "Segment Share",
+        "totalRevenue": "Total Revenue",
+        "segmentDetailsTitle": "Segment Details",
+        "segmentDetailsSubtitle": "Detailed metrics for each customer segment",
+        "segment": "SEGMENT",
+        "segmentShareCol": "SEGMENT SHARE",
+        "avgLTVCol": "AVG LTV",
+        "avgAOVCol": "AVG AOV",
+        "avgOrdersCol": "AVG ORDERS",
+        "noSegmentDataTitle": "No Segment Data",
+        "noSegmentDataSubtitle": "No segment data available in the selected period",
+        "noSegmentsFound": "No segments found",
+        "tryDifferentPeriod": "Try selecting a different time period.",
+        "vipCustomers": "VIP Customers",
+        "frequentBuyers": "Frequent Buyers",
+        "newCustomers": "New Customers",
+        "atRiskCustomers": "At-Risk Customers",
+        "dormantCustomers": "Dormant Customers"
       },
       "optimizationROI": {
         "title": "Optimization ROI",
-        "subtitle": "Measure the impact and ROI of checkout optimizations"
+        "subtitle": "Measure the impact and ROI of checkout optimizations",
+        "loading": "Loading optimization ROI...",
+        "failedToLoad": "Failed to load optimization ROI",
+        "optimizationDate": "Optimization Date",
+        "roiSummary": "ROI Summary",
+        "roi": "ROI",
+        "additionalRevenue": "Additional Revenue",
+        "revenueChange": "Revenue Change",
+        "increase": "increase",
+        "decrease": "decrease",
+        "conversionRateChange": "Conversion Rate Change",
+        "additionalOrders": "Additional Orders",
+        "ordersGained": "Orders gained",
+        "aovChange": "AOV Change",
+        "change": "change",
+        "beforePeriod": "Before Period",
+        "afterPeriod": "After Period",
+        "sessions": "Sessions",
+        "conversions": "Conversions",
+        "conversionRate": "Conversion Rate",
+        "revenue": "Revenue",
+        "orders": "Orders",
+        "aov": "AOV",
+        "impactSummaryTitle": "Impact Summary",
+        "impactSummarySubtitle": "Detailed changes breakdown",
+        "revenueImpact": "Revenue Impact",
+        "conversionImpact": "Conversion Impact",
+        "additionalOrdersMetric": "Additional Orders",
+        "additionalRevenueLabel": "additional revenue",
+        "pp": "pp"
       },
       "frictionScore": {
         "title": "Friction Score",
-        "subtitle": "Track checkout friction and its impact on conversion"
+        "subtitle": "Track checkout friction and its impact on conversion",
+        "loading": "Loading friction score...",
+        "failedToLoad": "Failed to load friction score",
+        "averageFrictionScore": "Average Friction Score",
+        "sessionsAnalyzed": "sessions analyzed",
+        "highFrictionSessions": "High Friction Sessions",
+        "ofTotal": "of total",
+        "lowFrictionConversion": "Low Friction Conversion",
+        "highFrictionConversion": "High Friction Conversion",
+        "conversionRate": "Conversion rate",
+        "frictionTrendTitle": "Friction Score Trend",
+        "frictionTrendSubtitle": "Average friction score and conversion rate over time",
+        "frictionScoreLabel": "Friction Score",
+        "frictionDistributionTitle": "Friction Distribution",
+        "frictionDistributionSubtitle": "Sessions by friction level",
+        "frictionBreakdownTitle": "Friction Breakdown",
+        "frictionBreakdownSubtitle": "Contributors to friction score",
+        "highFrictionSessionsTitle": "High Friction Sessions",
+        "highFrictionSessionsSubtitle": "Sessions with high or critical friction scores",
+        "session": "SESSION",
+        "frictionScore": "FRICTION SCORE",
+        "level": "LEVEL",
+        "duration": "DURATION",
+        "errors": "ERRORS",
+        "backNavs": "BACK NAVS",
+        "conversion": "CONVERSION",
+        "yes": "Yes",
+        "no": "No",
+        "noHighFrictionTitle": "No High Friction Sessions",
+        "noHighFrictionSubtitle": "No high-friction sessions detected in the selected period",
+        "lowFrictionDetected": "Low friction detected!",
+        "noHighFrictionPatterns": "No high-friction patterns found.",
+        "low": "Low",
+        "medium": "Medium",
+        "high": "High",
+        "critical": "Critical",
+        "time": "Time",
+        "navigation": "Navigation",
+        "completion": "Completion"
       },
       "revenueForecast": {
         "title": "Revenue Forecast",
-        "subtitle": "Predictive revenue forecasting with confidence intervals"
+        "subtitle": "Predictive revenue forecasting with confidence intervals",
+        "loading": "Loading revenue forecast...",
+        "failedToLoad": "Failed to load revenue forecast",
+        "forecast7": "7-Day Forecast",
+        "forecast30": "30-Day Forecast",
+        "forecast90": "90-Day Forecast",
+        "next7Days": "Next 7 days",
+        "next30Days": "Next 30 days",
+        "next90Days": "Next 90 days",
+        "trend": "Trend",
+        "perDay": "/day",
+        "forecastChartTitle": "Revenue Forecast",
+        "forecastChartSubtitle": "Historical data and forecasted revenue with confidence intervals",
+        "historicalRevenue": "Historical Revenue",
+        "forecast": "Forecast",
+        "upperBound": "Upper Bound",
+        "lowerBound": "Lower Bound",
+        "forecastSummaryTitle": "Forecast Summary",
+        "forecastSummarySubtitle": "Revenue projections by period",
+        "averageDailyForecast": "Average Daily Forecast",
+        "historicalSummaryTitle": "Historical Summary",
+        "historicalSummarySubtitle": "Past performance metrics",
+        "totalHistoricalRevenue": "Total Historical Revenue",
+        "averageDailyRevenue": "Average Daily Revenue",
+        "dailyGrowth": "Daily Growth",
+        "forecastAccuracyTitle": "Forecast Accuracy",
+        "forecastAccuracySubtitle": "Model performance metrics (when available)",
+        "meanAbsoluteError": "Mean Absolute Error",
+        "meanAbsolutePercentError": "Mean Absolute % Error",
+        "rootMeanSquaredError": "Root Mean Squared Error",
+        "days7": "7 Days",
+        "days30": "30 Days",
+        "days90": "90 Days"
       },
       "browsers": {
         "title": "Browser & Platform",
